--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
   
   <!-- fixed navbar -->
+  <header>
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper white">
@@ -39,6 +40,7 @@
       </div>
     </nav>
   </div>
+  </header>
 
   <!-- intro -->
   <div id="index-banner" class="parallax-container">
@@ -201,6 +203,8 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+
+  
 
   </body>
 </html>
