--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h2 class="intro" class="header center">Manutenzione e ristrutturazioni immobili</h2>
+        <h1 id="msg-intro1" class="header center">Manutenzione e ristrutturazioni immobili</h2>
         <div class="row center">
-          <h4 class="intro" class="header-subtitle col s12 light">affida a professionisti seri le cose a cui tieni</h4>
+          <h4 id="msg-intro2" class="header-subtitle col s12 light">affida a professionisti seri le cose a cui tieni</h4>
         </div>
         <div class="row center">
           <a href="#servizi" class="btn-large waves-effect waves-light red lighten-1">scopri i nostri servizi</a>
