--- a/index.html
+++ b/index.html
@@ -1,199 +1,190 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Pro.Edil | impresa edile, manutenzione e ristrutturazione immobili</title>
-  <meta name="description" content="Ristruttura la tua casa,in totale tranquillità, affidandoti a dei professionisti seri"/>
+  <title>Parallax Template - Materialize</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Raleway" rel="stylesheet">
-
-  <!-- awesome fonts -->
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-
 </head>
 <body>
   
-  <!-- fixed navbar -->
-  <header>
-  <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper white">
-        <a href="#" class="brand-logo">Pro.Edil</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#servizi">Servizi</a></li>
-          <li><a href="#mission">Mission</a></li>
-          <li><a href="#contattaci">Contattaci</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-        <li><a href="#servizi">Servizi</a></li>
-          <li><a href="#mission">Mission</a></li>
-          <li><a href="#contattaci">Contattaci</a></li>
+  <!-- barra di navigazione originale_____________________-->
+
+<!--
+  <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Navbar Link</a></li>
       </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+
+  -->
+
+<!-- barra di navigazione fissa ________________-->
+
+<div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo">Logo</a>
+
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+        </ul>
+
+        <ul class="side-nav" id="mobile-demo">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        </ul>
+
+
       </div>
     </nav>
   </div>
-  </header>
 
-  <!-- intro -->
-  <div id="index-banner" class="parallax-container">
-    <div class="section-intro no-pad-bot">
+
+
+   <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 id="msg-intro1" class="header center">Manutenzione e ristrutturazioni immobili</h2>
+        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
         <div class="row center">
-          <h4 id="msg-intro2" class="header-subtitle col s12 light">affida a professionisti seri le cose a cui tieni</h4>
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
         <div class="row center">
-          <a href="#servizi" class="btn-large waves-effect waves-light red lighten-1">scopri i nostri servizi</a>
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
         </div>
         <br><br>
 
       </div>
     </div>
     <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
-  </div>
+  </div> 
+  
+
+ 
 
 
-<!-- sevizi -->
-  <div id="servizi" class="container">
+  <div class="container">
     <div class="section">
- 		<div class="col-servizi">
 
-	      <!--   Icon Section   -->
-	      <div class="row">
-	        <div class="col s12 m4">
-	          <div class="icon-block">
-	            <h2 class="center blue-grey-text text-darken-4"><i class="material-icons">home</i></h2>
-	            <h5 class="center">Ristruturazione appartamenti</h5>
-              <br>
-              <p class="left-align light">Hai tutti i vantaggi della soluzione “Chiavi in Mano” ovvero un unico interlocutore che ti libera da qualsiasi preoccupazione: dalla progettazione, alle pratiche burocratiche e amministrative. Avrai un Architetto dedicato che si occuperà di tutta la direzione dei lavori e del Capo Cantiere, affinché ogni cosa venga eseguita secondo le tue preferenze e sopratutto nel rispetto dei tempi stabiliti.</p>
-	          </div>
-	        </div>
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Speeds up development</h5>
 
-	        <div class="col s12 m4">
-	          <div class="icon-block">
-	            <h2 class="center blue-grey-text text-darken-4"><i class="material-icons">location_city</i></h2>
-	            <h5 class="center">Ristrutturazione grandi immobili  </h5>
-              <br>
-              <p class="left-align light">Gestiamo tutte le attività riguardanti le manutenzioni condominiali e tutti i lavori (ordinari e straordinari) necessari. Manutenzioni condominiali di grande durevolezza. Il mantenimento dei rivestimenti presenti in un edificio condominiale, dei serramenti,della sistemazione di facciate, tetti e di tutte le componenti degli spazi interni.</p>
-	          </div>
-	        </div>
-
+            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
 
         <div class="col s12 m4">
-	          <div class="icon-block">
-	            <h2 class="center blue-grey-text text-darken-4"><i class="material-icons">build</i></h2>
-	            <h5 class="center">Prestazioni professionali </h5>
-              <br>
-              <p class="left-align light">Realizzaziamo opere edili e impianti tecnologici certificati D.M. 37/08.<br> Affidati all'esperienza professionale e certificata, che abbiamo acquisito dierettamente da grandi aziende come Velux, Immergas, Membrapol, Kerakoll ......</p>
-	          </div>
-	        </div>
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">User Experience Focused</h5>
 
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Easy to work with</h5>
+
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          </div>
+        </div>
       </div>
-   	</div>
-   </div>
-  </div>
-</div>
 
-<!-- mission -->
-  <div id="mission" class="parallax-container valign-wrapper">
-    <div class="section-mission no-pad-bot">
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="intro">"Il futuro appartiene a coloro che credono nella bellezza dei propri sogni"</h4>
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
-<div class="row center">
-          <a href="#contattaci" class="btn-large waves-effect waves-light red lighten-1">CONTATTACI</a>
-        </div>
-
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
     <div class="section">
 
       <div class="row">
-        <div class="col s12">          
-          <p class="left-align light">Siamo un’impresa di ristrutturazioni con sede a Palermo. </p>
-          <p>La nostra missione è aiutare le persone a realizzare la casa dei propri sogni, grazie ad una progettazione precisa e dettagliata.</p>
-          <p>Per offrirti il massimo in termini di qualità, mettiamo a disposizione competenza e professionalità nelle fasi di progettazione edilizia, esecuzione del lavoro e conoscenza delle nuove tecniche e dei materiali.</p>
-          <p>Ogni lavoro è eseguito con attenzione ai dettagli, avrai infatti a disposizione un Capo Cantiere, un Architetto, con l’obiettivo di realizzare un lavoro ad opera d’arte nel rispetto dei tempi prestabiliti in fase contrattuale.</p>
-          <p>Ecco come lavoriamo: analizziamo ogni tua richiesta e solo dopo ti proponiamo una soluzione su misura. </p>
-          <p>Non devi preoccuparti assolutamente di nulla perché gestiamo e controlliamo ogni aspetto del lavoro:
-          <ul>
-          <li>lo sviluppo della soluzione architettonica e del progetto;</li>
-          <li>la presentazione delle pratiche amministrative e tecniche;</li>
-          <li>ti diamo supporto nella scelta e nella fornitura di tutti i materiali;</li>
-          <li>gestiamo e organizziamo completamente il cantiere attraverso maestranze accuratamente selezionate e certificate.</li>
-          </ul></p>
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Contact Us</h4>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
         </div>
       </div>
 
     </div>
   </div>
 
-<!-- contattaci -->
-  <div id="contattaci" class="parallax-container valign-wrapper">
-    <div class="section-contattaci no-pad-bot">
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="intro" class="header col s12 light">Sopralluogo e preventivo gratuito</h5>
-
-          <div class="row">
-        <div class="input-field col s12 l6 offset-l3">
-          <input id="email" type="email" class="validate white center black-text" placeholder="Inserisci qui la tua email!">
-          <button class="btn btn-registrazione waves-effect waves-light red lighten-1" type="submit" name="action">voglio essere contattato!</button>
-        </div>
-      </div>
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
-<!-- footer -->
-  <footer class="page-footer">
+  <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Pro.Edil S.a.s.</h5>
-          <h5 class="white-text">di Collura Giuseppe & C.</h5>
-          <p class="grey-text text-lighten-4">
-            <ul>
-            <li><a class="white-text">Sede Legale : via Mariano Stabile, 273 - 90141 Palermo</a></li>
-            <li><a class="white-text">Partita Iva: 05264270827</a></li>
-            <li><a class="white-text">Cell. 328 760 68 56</a></li>
-            <li>
-              <a href="mailto:info@proedilsas.com" class="social-icon"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+          <h5 class="white-text">Company Bio</h5>
+          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
 
-              <a href="https://www.facebook.com/proedil.dicolluragiuseppe?fref=ts" target="_blank" class="social-icon"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
 
-              <a href="" target="_blank" class="social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-
-              <a href="" target="_blank" class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            </li>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
-
-          </p>
-
-      </div>
-        
-        
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-
-        <div class="footer-copyright">
-      <div class="container">2016 ©  <a class="brown-text text-lighten-3" href="http://proedilsas.com" target="_blank">Pro.Edil</a>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
@@ -203,8 +194,6 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-
-  
 
   </body>
 </html>
