--- a/i---ndex.html
+++ b/i---ndex.html
@@ -142,7 +142,7 @@
   </div>
 </div>
 
-<!-- nivo -->
+<!-- nivo
   <div id="index-banner" class="parallax-container">
     <div class="section-intro no-pad-bot">
   
@@ -171,12 +171,12 @@
       <p>Installiamo caldaie convenzionali e a condensazione Immergas <a href="">Continua...</a></p>
   </div> </div></div>
 
-<!-- pre chi siamo -->
+<!-- pre chi siamo 
   <div id="chisiamo" class="container">
     <div class="section">
     <div class="col-servizi">
 
-        <!--   Icon Section   -->
+        <!--   Icon Section   
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
@@ -206,12 +206,12 @@
     </div>
    </div>
   </div>
-</div>
+</div>  -->
 
 
 
 <!-- chi siamo -->
-  <div  class="parallax-container valign-wrapper">
+  <div id="chisiamo" class="parallax-container valign-wrapper">
     <div class="section-chisiamo no-pad-bot">
       <div class="container">
         <div class="row center">
